--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@chakra-ui/react": "^3.7.0",
     "@emotion/react": "^11.14.0",
+    "axios": "^1.7.9",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
